force-app/main/default/objects/Volunteer_Shift_Worker__c/fields/Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Time__c</fullName>
    <formula>Volunteer_Shift__r.Shift_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift End Time</label>
    <type>DateTime</type>
</CustomField>