force-app/main/default/objects/Volunteer_Shift_Worker__c/fields/Shift_Hours__c.field-meta.xml
<CustomField>
    <fullName>Shift_Hours__c</fullName>
    <formula>Volunteer_Shift__r.Shift_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>