force-app/main/default/objects/Volunteer_Shift_Worker__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Volunteer_Shift_Workers</relationshipName>
    <type>Lookup</type>
</CustomField>