force-app/main/default/objects/Volunteer_Shift_Worker__c/fields/Volunteer_Job__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Job__c</fullName>
    <formula>Volunteer_Shift__r.Volunteer_Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Job</label>
    <type>Text</type>
</CustomField>