force-app/main/default/objects/Volunteer_Shift_Worker__c/fields/Volunteer_Shift__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Shift__c</fullName>
    <label>Volunteer Shift</label>
    <referenceTo>Volunteer_Shift__c</referenceTo>
    <relationshipLabel>Volunteer Shift Workers</relationshipLabel>
    <relationshipName>Volunteer_Shift_Workers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>